--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/StarIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>star-asegurados-ltda-web</title>
+    <title>Star Asegurados</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Chatwoot -->
+    <script>
+      (function(d,t) {
+        var BASE_URL="https://chatwoot-chatwoot.lhdkwr.easypanel.host";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+          window.chatwootSDK.run({
+            websiteToken: 'XhrwnvkZE2BXFz6qB1d6i3ip',
+            baseUrl: BASE_URL
+          })
+        }
+      })(document,"script");
+    </script>
   </body>
 </html>
